# pico-min

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: pico-min-command-syntax.md
lib/: CMakeLists.txt
lib/app/: CMakeLists.txt  state-machine.cpp  state-machine.hpp  worker.cpp  worker.hpp
lib/cmdctl/: CMakeLists.txt  board-config.cpp  board-config.hpp  command-declarations.hpp  command-handler.cpp  command-handler.hpp  command-lang.cpp  command-lang.hpp  command-parser.cpp  command-parser.hpp  command.cpp  command.hpp  communication.cpp  communication.hpp  error-context.hpp  errors.cpp  errors.hpp  gpio-declarations.hpp  gpio.cpp  gpio.hpp  json-report.cpp  json-report.hpp  reports.cpp  reports.hpp  response-handler.hpp  serial-comm.cpp  serial-comm.hpp  shutdown.hpp
lib/core/: CMakeLists.txt  factory-data.hpp  logger.cpp  logger.hpp  packed-datetime.cpp  packed-datetime.hpp  product-info.hpp  pystring.cpp  random.hpp  utilities.cpp  utilities.hpp
lib/devices/: CMakeLists.txt  csi2c.hpp  devices-container.hpp  led.cpp  led.hpp  mcu-temp-sensor.cpp  mcu-temp-sensor.hpp  pico-adc.cpp  pico-adc.hpp  temp-sensor.hpp
lib/drivers/: CMakeLists.txt  drivers-container.cpp  drivers-container.hpp  drivers-declarations.hpp  led-driver.cpp  led-driver.hpp
lib/tests/: CMakeLists.txt  assertion.hpp  test-onboard-led.cpp  test-onboard-led.hpp  test.cpp  test.hpp
src/: CMakeLists.txt  main.cpp  startup.cpp  startup.hpp
